--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Noel George - Portfolio</title>
 </head>
 <body>
-    Hello!
+    <nav>
+        <p class="nav-name">Noel George</p>
+        <ul class="nav-items">
+            <li class="nav-item">Skills</li>
+            <li class="nav-item">Projects</li>
+            <li class="nav-item outsource">Resume</li>
+        </ul>
+    </nav>
 </body>
 </html>
