--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css" />
     <title>Noel George - Portfolio</title>
 </head>
 <body>
-    <nav>
-        <p class="nav-name">Noel George</p>
-        <ul class="nav-items">
-            <li class="nav-item">Skills</li>
-            <li class="nav-item">Projects</li>
-            <li class="nav-item outsource">Resume</li>
-        </ul>
-    </nav>
+    <section class="homepage">
+        <nav>
+            <p class="nav-name">Noel George</p>
+            <ul class="nav-items">
+                <li class="nav-item">Skills</li>
+                <li class="nav-item">Projects</li>
+                <li class="nav-item outsource">Resume</li>
+            </ul>
+        </nav>
+    </section>
 </body>
 </html>
