Front page test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <section class="homepage">
+        <!-- <div class="bg-video">
+            <video width="1080" height="700" autoplay>
+                <source src="bg.mp4" type="video/mp4" />
+            </video>
+        </div> -->
+        <!-- <img src="assets/pattern1.png" class="bg-image" /> -->
         <nav>
             <p class="nav-name">Noel George</p>
             <ul class="nav-items">
@@ -19,6 +25,11 @@
                 <li class="nav-item outsource">Resume</li>
             </ul>
         </nav>
+        <main>
+            <h1 class="main-title first">Frontend</h1>
+            <h1 class="main-title second">Developer</h1>
+            <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
+        </main>
     </section>
 </body>
 </html>
