--- a/loading.html
+++ b/loading.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="loading-container">
-        <p data-title="HELLO, WORLD!">HELLO, WORLD!</p>
+        <p class="jittery-text" data-title="HELLO, WORLD!">HELLO, WORLD!</p>
     </div>
     <script src="loading.js"></script>
 </body>
