--- a/index.html
+++ b/index.html
@@ -27,8 +27,28 @@
         </nav>
         <main>
             <h1 class="main-title first">Frontend</h1>
-            <h1 class="main-title second">Developer</h1>
+            <div class="second">
+                <svg width="242" height="242" viewBox="0 0 242 242" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_82_116)">
+                    <path d="M73.1042 121L207.104 121" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M163 73.1041L210.896 121L163 168.896" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_82_116">
+                    <rect y="242" width="242" height="242" rx="64" transform="rotate(-90 0 242)" fill="white"/>
+                    </clipPath>
+                    </defs>
+                </svg>
+                    
+                <h1 class="main-title">Developer</h1>
+            </div>
             <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
+            <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="64" height="64" rx="32" fill="#E6E6FA"/>
+                <path d="M32 19.3333V44.6667" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M44.6666 32L32 44.6667L19.3333 32" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+                
         </main>
     </section>
 </body>
