--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
                 <h1 class="main-title">Developer</h1>
             </div>
             <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
-            <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="64" height="64" rx="32" fill="#E6E6FA"/>
-                <path d="M32 19.3333V44.6667" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M44.6666 32L32 44.6667L19.3333 32" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-                
+            <div class="scroll-indication">
+                <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14 1.33333V26.6667" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M26.6666 14L14 26.6667L1.33331 14" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <p class="scroll-text">Scroll down   Scroll down</p>                    
+            </div>
+            <div class="landing-contact">Contact</div>
         </main>
     </section>
 </body>
