Added finishing touches to structure

--- a/index.html
+++ b/index.html
@@ -43,15 +43,18 @@
                 <h1 class="main-title">Developer</h1>
             </div>
             <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
-            <div class="scroll-indication">
-                <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M14 1.33333V26.6667" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M26.6666 14L14 26.6667L1.33331 14" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <p class="scroll-text">Scroll down   Scroll down</p>                    
-            </div>
+            <div class="scroll">
+                <div class="scroll-indication">
+                    <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14 1.33333V26.6667" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M26.6666 14L14 26.6667L1.33331 14" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <p class="scroll-text">Scroll down   Scroll down  .</p>
+            </div>                  
             <div class="landing-contact">Contact</div>
         </main>
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
