Added second page + stack effect

--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
                         <path d="M26.6666 14L14 26.6667L1.33331 14" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
-                <p class="scroll-text">Scroll down   Scroll down  .</p>
+                <p class="scroll-text">Scroll down . Scroll down .</p>
             </div>                  
             <div class="landing-contact">Contact</div>
         </main>
+    </section>
+    <section class="skills">
+        What do I know?
     </section>
     <script src="index.js"></script>
 </body>
