Skills section title

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </main>
     </section>
     <section class="skills">
-        What do I know?
+        <h1 class="skills-header">What do I know?</h1>
+        <p class="skills-descr">Here are some frameworks and languages I work with</p>
     </section>
     <script src="index.js"></script>
 </body>
