Skills section structure completed

--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
     <section class="skills">
         <h1 class="skills-header">What do I know?</h1>
         <p class="skills-descr">Here are some frameworks and languages I work with</p>
+        <div class="stack-container">
+            <p class="stack-title">FRONTEND</p>
+            <ul class="stack-list-container">
+                <li class="skill">React</li>
+                <li class="skill">Tailwind CSS</li>
+                <li class="skill">Electron JS</li>
+                <li class="skill">CSS</li>
+                <li class="skill">HTML</li>
+                <li class="skill">Flutter</li>
+            </ul>
+        </div>
+        <div class="stack-container">
+            <p class="stack-title">PROGRAMMING LANGUAGES</p>
+            <ul class="stack-list-container">
+                <li class="skill">Javascript</li>
+                <li class="skill">Dart</li>
+                <li class="skill">C/C++</li>
+                <li class="skill">Python</li>
+                <li class="skill">Java</li>
+            </ul>
+        </div>
     </section>
     <script src="index.js"></script>
 </body>
