Interaction of skills

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
         <div class="stack-container">
             <p class="stack-title">FRONTEND</p>
             <ul class="stack-list-container">
-                <li class="skill">React</li>
-                <li class="skill">Tailwind CSS</li>
-                <li class="skill">Electron JS</li>
-                <li class="skill">CSS</li>
-                <li class="skill">HTML</li>
-                <li class="skill">Flutter</li>
+                <li class="skill"><p>React</p></li>
+                <li class="skill"><p>Tailwind CSS</p></li>
+                <li class="skill"><p>Electron JS</p></li>
+                <li class="skill"><p>CSS</p></li>
+                <li class="skill"><p>HTML</p></li>
+                <li class="skill"><p>Flutter</p></li>
             </ul>
         </div>
         <div class="stack-container">
             <p class="stack-title">PROGRAMMING LANGUAGES</p>
             <ul class="stack-list-container">
-                <li class="skill">Javascript</li>
-                <li class="skill">Dart</li>
-                <li class="skill">C/C++</li>
-                <li class="skill">Python</li>
-                <li class="skill">Java</li>
+                <li class="skill"><p>Javascript</p></li>
+                <li class="skill"><p>Dart</p></li>
+                <li class="skill"><p>C/C++</p></li>
+                <li class="skill"><p>Python</p></li>
+                <li class="skill"><p>Java</p></li>
             </ul>
         </div>
     </section>
