Added scroll to skills

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <p class="nav-name">Noel George</p>
             <ul class="nav-items">
-                <li class="nav-item">Skills</li>
+                <li class="nav-item"><a href="#skills">Skills</a></li>
                 <li class="nav-item">Projects</li>
                 <li class="nav-item outsource">Resume</li>
             </ul>
@@ -55,7 +55,7 @@
             <div class="landing-contact">Contact</div>
         </main>
     </section>
-    <section class="skills">
+    <section id="skills" class="skills">
         <h1 class="skills-header">What do I know?</h1>
         <p class="skills-descr">Here are some frameworks and languages I work with</p>
         <div class="stack-container">
