Added responsiveness for first breakpoint

--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
 </head>
 <body>
     <section class="homepage">
-        <!-- <div class="bg-video">
-            <video width="1080" height="700" autoplay>
-                <source src="bg.mp4" type="video/mp4" />
-            </video>
-        </div> -->
-        <!-- <img src="assets/pattern1.png" class="bg-image" /> -->
         <nav>
             <p class="nav-name">Noel George</p>
             <ul class="nav-items">
@@ -27,21 +21,23 @@
             </ul>
         </nav>
         <main>
-            <h1 class="main-title first">Frontend</h1>
-            <div class="second">
-                <svg width="242" height="242" viewBox="0 0 242 242" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_82_116)">
-                    <path d="M73.1042 121L207.104 121" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M163 73.1041L210.896 121L163 168.896" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
-                    </g>
-                    <defs>
-                    <clipPath id="clip0_82_116">
-                    <rect y="242" width="242" height="242" rx="64" transform="rotate(-90 0 242)" fill="white"/>
-                    </clipPath>
-                    </defs>
-                </svg>
-                    
-                <h1 class="main-title">Developer</h1>
+            <div class="main-title-container">
+                <h1 class="main-title first">Frontend</h1>
+                <div class="second">
+                    <svg width="242" height="242" viewBox="0 0 242 242" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_82_116)">
+                        <path d="M73.1042 121L207.104 121" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M163 73.1041L210.896 121L163 168.896" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_82_116">
+                        <rect y="242" width="242" height="242" rx="64" transform="rotate(-90 0 242)" fill="white"/>
+                        </clipPath>
+                        </defs>
+                    </svg>
+                
+                    <h1 class="main-title">Developer</h1>
+                </div>
             </div>
             <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
             <div class="scroll">
