--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <link rel="icon" href="assets/icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="loading.css" />
     <title>Noel George - Portfolio</title>
 </head>
 <body>
+    <section class="loading-container">
+        <p class="jittery-text" data-title="HELLO, WORLD!">HELLO, WORLD!</p>
+    </section>
     <section class="homepage">
         <nav>
             <p class="nav-name">Noel George</p>
@@ -78,5 +83,6 @@
         </div>
     </section>
     <script src="index.js"></script>
+    <script src="loading.js"></script>
 </body>
 </html>
