--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h1 class="main-title">Developer</h1>
                 </div>
             </div>
-            <!-- <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p> -->
+            <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
             <div class="scroll">
                 <div class="scroll-indication">
                     <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
