--- a/index.html
+++ b/index.html
@@ -10,78 +10,82 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="loading.css" />
+    <link rel="stylesheet" href="locomotive-scroll.css" />
     <title>Noel George - Portfolio</title>
 </head>
 <body>
     <section class="loading-container">
         <p class="jittery-text" data-title="HELLO, WORLD!">HELLO, WORLD!</p>
     </section>
-    <section class="homepage">
-        <nav>
-            <p class="nav-name">Noel George</p>
-            <ul class="nav-items">
-                <li class="nav-item"><a href="#skills">Skills</a></li>
-                <li class="nav-item">Projects</li>
-                <li class="nav-item outsource">Resume</li>
-            </ul>
-        </nav>
-        <main>
-            <div class="main-title-container">
-                <h1 class="main-title first">Frontend</h1>
-                <div class="second">
-                    <svg width="242" height="242" viewBox="0 0 242 242" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_82_116)">
-                        <path d="M73.1042 121L207.104 121" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M163 73.1041L210.896 121L163 168.896" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
-                        </g>
-                        <defs>
-                        <clipPath id="clip0_82_116">
-                        <rect y="242" width="242" height="242" rx="64" transform="rotate(-90 0 242)" fill="white"/>
-                        </clipPath>
-                        </defs>
-                    </svg>
-                
-                    <h1 class="main-title">Developer</h1>
+    <div class="master-container" data-scroll-container>
+        <section class="homepage" data-scroll-section>
+            <nav>
+                <p class="nav-name">Noel George</p>
+                <ul class="nav-items">
+                    <li class="nav-item"><a href="#skills">Skills</a></li>
+                    <li class="nav-item">Projects</li>
+                    <li class="nav-item outsource">Resume</li>
+                </ul>
+            </nav>
+            <main>
+                <div class="main-title-container">
+                    <h1 class="main-title first">Frontend</h1>
+                    <div class="second">
+                        <svg width="242" height="242" viewBox="0 0 242 242" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_82_116)">
+                            <path d="M73.1042 121L207.104 121" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M163 73.1041L210.896 121L163 168.896" stroke="#E6E6FA" stroke-width="7" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_82_116">
+                            <rect y="242" width="242" height="242" rx="64" transform="rotate(-90 0 242)" fill="white"/>
+                            </clipPath>
+                            </defs>
+                        </svg>
+        
+                        <h1 class="main-title">Developer</h1>
+                    </div>
                 </div>
+                <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
+                <div class="scroll">
+                    <div class="scroll-indication">
+                        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14 1.33333V26.6667" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M26.6666 14L14 26.6667L1.33331 14" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <p class="scroll-text">Scroll down . Scroll down .</p>
+                </div>
+                <div class="landing-contact"><span>Contact</span></div>
+            </main>
+        </section>
+        <section id="skills" class="skills">
+            <h1 class="skills-header">What do I know?</h1>
+            <p class="skills-descr">Here are some frameworks and languages I work with</p>
+            <div class="stack-container">
+                <p class="stack-title">FRONTEND</p>
+                <ul class="stack-list-container">
+                    <li class="skill"><p>React</p></li>
+                    <li class="skill"><p>Tailwind CSS</p></li>
+                    <li class="skill"><p>Electron JS</p></li>
+                    <li class="skill"><p>CSS</p></li>
+                    <li class="skill"><p>HTML</p></li>
+                    <li class="skill"><p>Flutter</p></li>
+                </ul>
             </div>
-            <p class="main-description">Turning concepts into seamless <span class="underline">web experiences</span></p>
-            <div class="scroll">
-                <div class="scroll-indication">
-                    <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14 1.33333V26.6667" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M26.6666 14L14 26.6667L1.33331 14" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </div>
-                <p class="scroll-text">Scroll down . Scroll down .</p>
-            </div>                  
-            <div class="landing-contact"><span>Contact</span></div>
-        </main>
-    </section>
-    <section id="skills" class="skills">
-        <h1 class="skills-header">What do I know?</h1>
-        <p class="skills-descr">Here are some frameworks and languages I work with</p>
-        <div class="stack-container">
-            <p class="stack-title">FRONTEND</p>
-            <ul class="stack-list-container">
-                <li class="skill"><p>React</p></li>
-                <li class="skill"><p>Tailwind CSS</p></li>
-                <li class="skill"><p>Electron JS</p></li>
-                <li class="skill"><p>CSS</p></li>
-                <li class="skill"><p>HTML</p></li>
-                <li class="skill"><p>Flutter</p></li>
-            </ul>
-        </div>
-        <div class="stack-container">
-            <p class="stack-title">PROGRAMMING LANGUAGES</p>
-            <ul class="stack-list-container">
-                <li class="skill"><p>Javascript</p></li>
-                <li class="skill"><p>Dart</p></li>
-                <li class="skill"><p>C/C++</p></li>
-                <li class="skill"><p>Python</p></li>
-                <li class="skill"><p>Java</p></li>
-            </ul>
-        </div>
-    </section>
+            <div class="stack-container">
+                <p class="stack-title">PROGRAMMING LANGUAGES</p>
+                <ul class="stack-list-container">
+                    <li class="skill"><p>Javascript</p></li>
+                    <li class="skill"><p>Dart</p></li>
+                    <li class="skill"><p>C/C++</p></li>
+                    <li class="skill"><p>Python</p></li>
+                    <li class="skill"><p>Java</p></li>
+                </ul>
+            </div>
+        </section>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
     <script src="index.js"></script>
     <script src="loading.js"></script>
 </body>
